# nnfs

./: explore.py  pyproject.toml
src/: activation_function.py  dense_layer.py  hidden_layers.py  loss_function.py  test.py
