[tool.poetry]
name = "nnfs"
version = "0.1.0"
description = ""
authors = ["n-difilippo <nicholas.difilippo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
