[tool.poetry]
name = "nnfs-project"
version = "0.1.0"
description = ""
authors = ["n-difilippo <nicholas.difilippo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
nnfs = "^0.5.1"
setuptools = "^70.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
